--- a/calc.html
+++ b/calc.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Basic calculator</h1>
+    <h2>The sum is <span id="sum"></span></h2>
     <script src='calc.js'></script>
 </body>
 </html>
